# signal_for_android_decryption

./: pyproject.toml
signal_decrypt_backup/: decrypt_backup.py
