[project]
name = "signal_decrypt_backup"
version = "0.0.1+20250301"
description = "Decrypt Signal backups"
license = { text = "GPL-3.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"protobuf>=5.29.3",
	"cryptography>=44.0.1",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
signal_decrypt_backup = "signal_decrypt_backup.decrypt_backup:main"
